# burp-tools

./: .gitignore  .gitlab-ci-config.yml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ChangeLog  Config.cmake.in  MANIFEST  Makefile  Makefile.bkp  README  README.md  barf.ftn  brpcopi.ftn  brpvoir.f  burp_constants.f90  burp_module.f90  burp_obj_rpt__define.pro  burprocs2001.pro  chang_ext.sh  char.cdk  directives  editbrp.ftn  fermbs.ftn  fiches.cdk  file_exists.pro  genso_linux_idl63.sh  genso_pollux_idl54.sh  genso_pollux_idl63.sh  i_idl_burp2001.c  initburplib.pro  jdatxx.ftn  linux.idl5.4  linux.idl6.3  mailer.c  make_so.sh  makefile  maxprms.cdk  new_burprocs2001.pro  object_initialization.f90  (+7 more)
.ssm.d/: control  post-install  post-install.in
data/: DESCRIPTION
exemples/: make.ksh  makefile  test.ksh  write1.f90  write2f.f90  write_update.f90
include/IRIX64/: readme
include/Linux/: readme
include/Linux_alpha/: readme
lib/IRIX64/: readme
lib/Linux/: readme
lib/Linux_alpha/: readme
share/scripts/: arcad_obj_config__define.pro  box_latlon.pro  burp_obj_block__define.pro  burp_obj_file__define.pro  burprocs2001.pro  colocation_points_select.pro  get_omm_stations.pro  idl_burp_obj.pro  init_burp_objects.pro  initburplib.pro  loadconfig.pro  map_2points_new.pro  min_to_decimal.pro  new_burprocs2001.pro  new_initburplib.pro  omm_template_structure.pro  wheretomulti.pro
src/: .gitignore  CMakeLists.txt  burp_block_class.f90  burp_btyp_runn_flgs.f90  burp_file_class.f90  burp_module.f90  burp_rpt_class.f90  conversion_module.f90  d.compile.cfg  domod.sh  errormessages.f90  init_t.f90  libburp_idl.c  librmn_declaration.f90  make.ksh  makefile  testcli.f90
src/brpvoir/: CMakeLists.txt  brpvoir.f  mrfvoi.f  rai2char.c
src/editbrp/: CMakeLists.txt  barf.f90  bdesire.f90  bdesire.ftn  bexdes.f90  bexdes.ftn  brpcopi.f90  burp_RND  burp_SEQ  char.cdk  desrs.cdk  editbrp.f90  editbrp.ftn  fermbs.f90  fiches.cdk  jdatxx.f  jdatxx.f90  jhmenm.f90  jhmenm.ftn  julm.f90  julm.ftn  maxprms.cdk  opodate.f  opodate.f90  ouvrebs.f  ouvrebs.f90  ouvrebs.ftn  prefix.f90  restdez.f90  restdez.ftn  spool.f90  spool.ftn
src/libburp/: CMakeLists.txt  burp_block_class.f90  burp_rpt_class.f90  conversion_module.f90  decimal_digits.f90  errormessages.f90
src/libburpc/: CMakeLists.txt  burp_api.c  burp_api.h
src/libburpidl/: CMakeLists.txt  libburp_idl.c
test/: CMakeLists.txt  directives  tableburp  test.pro  test.sh
test/libburp/: CMakeLists.txt  like_liburp.f90  like_liburp2.f90  prog_test.f90  read1.f90  read2.f90  write1.f90  write1f.f90  write3f.f90  write_update.f90
test/libburpc/: CMakeLists.txt  alain.cpp  elements.cpp  maxlen.cpp  obs.cpp  read1.c  readburp.c  readcc.cpp  readfloat.c  run_test.sh  setit.cpp  test.cpp  test.py  val.cpp  write1.cpp  write2.cpp  write2d.cpp  write2f.cpp
test/libburpidl/: CMakeLists.txt  test.pro  test.sh
tests/: CMakeLists.txt  like_liburp.f90  like_liburp2.f90  make.ksh  read1f.f90  read2.f90  readburp.c  run_test.sh  test.ksh  write1f.f90  write2.f90  write3.f90
